# agentic-mex5

./: .gitignore  README.md  agent-test.py  agent.py  depth_map.npy  detect_pen.py  dummy_mcp_server.py  main.py  mask_meta.json  mcp_server.py  mcp_server2.py  prompts.yaml  pyproject.toml  requirements.txt  robograb.py  test_client.py  test_client1.py  test_client2.py  todo.md
archive/: take_rspic.py  test_ywsam_grasp12_arm2.py
