[project]
name = "agentic-mex5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.1",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.4",
    "smolagents[litellm,mcp]>=1.19.0",
    "ultralytics>=8.3.161",
]
